[project]
name = "flowmemory-warranted-agents"
version = "0.3.0"
description = "Local FlowMemory proof for warranted agents, PolicyCards, FlowBond, PulsePass, and FlowCompiler conformance."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
flowcompiler = "flowmemory_compiler.cli:main"
